--- a/Template5.html
+++ b/Template5.html
@@ -4,41 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Template5.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <title>Wedding Invitation</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#janejohn">Jane & John</a></li>
-            <li><a href="#wedding">Wedding</a></li>
-            <li><a href="#rsvp">RSVP</a></li>
-        </ul>
-    </nav>
-    <div class="img-menu">
+    <div class="top">
+        <a href="#home">Home</a>
+        <a href="#janejohn">Jane & John</a>
+        <a href="#wedding">Wedding</a>
+        <a href="#rsvp">RSVP</a>
+    </div>
+    <div class="img-menu" id="home">
         <div id="text-center">
             <h1>Jane & John</h1>
             <h2>Are getting married <br><b>17.07.2017</b></h2>
         </div>
     </div>
-    <div class="content" id="wedding">
+    <div class="content" id="janejohn">
         <div class="content-janejohn">
-            <h1 style="text-align: center;">Jane John</h1>
-            <img src="images/wedding_couple2.jpg" alt="" style="width: 100%;">
-            <p style="padding: 32px 0; "><i>You all know us. And we all know you. We are getting married lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</i></p>
-           <div style="text-align: center;">
-            <a href="#wedding">Wedding Details</a>
-           </div> 
-        </div>
+            <h1><b>Jane & John</b></h1>
+            <img src="images/wedding_couple2.jpg" alt="" style="width: 100%; border-radius: 10px;">
+            <p><i>You all know us. And we all know you. We are getting married lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</i></p>
+            <div style="text-align: center; padding:48px 0;border-radius: 10px;">
+                <a href="#wedding">Wedding Details</a>
+            </div> 
+        </div>  
         <div class="img-invited">
             <div id="text-center">
                 <h1>You Are Invited</h1>
                 <h2>Of course..</h2>
             </div>
         </div>
-        <div class="content-janejohn">
+        <div class="content-janejohn" id="wedding">
             <h1 style="text-align: center;">THE WEDDING</h1>
-            <img src="images/wedding_location.jpg" alt="" style="width: 100%;">
+            <img src="images/wedding_location.jpg" alt="" style="width: 100%; padding-top:32px">
             <div class="row">
                 <div class="col">
                     <h1>When</h1>
@@ -52,14 +51,14 @@
                 </div>
             </div>
         </div>
-        <div style="text-align: center; background-color: #ffdddd!important;">
-            <h1>HOPE YOU CAN MAKE IT!</h1>
-            <h3>  Kindly Respond By January, 2017</h3>
-            <a href="">RSVP</a>
-        </div>
+    </div>
+    <div class="rsvp-content" id="rsvp">
+        <h1>HOPE YOU CAN MAKE IT!</h1>
+        <h3>Kindly Respond By January, 2017</h3>
+        <p><a href="">RSVP</a></p>
     </div>
     <footer>
-        <p style="background-color:black; color:white" >Powered by <a href="">W3.css</a></p>
+        <p>Powered by <a href="#">w3.css</a></p>
     </footer>
 </body>
 </html>
