radius/grayscale flowers

--- a/Template5.html
+++ b/Template5.html
@@ -23,7 +23,7 @@
     <div class="content" id="janejohn">
         <div class="content-janejohn">
             <h1><b>Jane & John</b></h1>
-            <img src="images/wedding_couple2.jpg" alt="" style="width: 100%; border-radius: 10px;">
+            <img src="images/wedding_couple2.jpg" alt="" style="width: 100%;">
             <p><i>You all know us. And we all know you. We are getting married lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</i></p>
             <div style="text-align: center; padding:48px 0;border-radius: 10px;">
                 <a href="#wedding">Wedding Details</a>
